--- a/res/layout/torrent_detail_files_row.xml
+++ b/res/layout/torrent_detail_files_row.xml
@@ -3,7 +3,7 @@
     android:id="@+id/torrent_detail_files_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:fontFamily="sans-serif"
+    android:fontFamily="sans-serif-light"
     android:paddingTop="8dp"
     android:paddingBottom="8dp" >
 </CheckBox>
