--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -94,7 +94,7 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:fontFamily">sans-serif-condensed</item>
         <item name="android:padding">8dp</item>
         <item name="android:background">@drawable/border_bottom</item>
         <item name="android:layout_marginTop">4dp</item>
