--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -3,4 +3,5 @@
     <item type="id" name="numbers_key" />
     <item type="id" name="general_preferences" />
     <item type="id" name="dialog_entry" />
+    <item type="id" name="about_header" />
 </resources>
