finish the about dialog and donation link

--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -38,6 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginTop="8dp"
             android:gravity="center"
             android:text="@string/about_description"
             android:textSize="14sp" />
@@ -46,10 +47,10 @@
             android:id="@+id/about_donation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="24dp"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/about_donation"
             android:textSize="12sp" />
     </LinearLayout>
     
