--- a/res/menu/torrent_list_multiselect.xml
+++ b/res/menu/torrent_list_multiselect.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-        <item android:id="@+id/resume"
+    <item android:id="@+id/select_all"
+	    android:title="@string/ic_menu_select_all"
+	    android:icon="@drawable/ic_menu_select_all"
+	    android:showAsAction="always" />
+    
+    <item android:id="@+id/resume"
 	    android:title="@string/resume"
 	    android:icon="@drawable/ic_menu_resume"
 	    android:showAsAction="always" />
@@ -13,12 +18,12 @@
     <item android:id="@+id/remove"
 	    android:title="@string/remove"
 	    android:icon="@drawable/ic_menu_cancel"
-	    android:showAsAction="always" />
+	    android:showAsAction="ifRoom" />
     
 	<item android:id="@+id/delete"
 	    android:title="@string/remove_data"
 	    android:icon="@drawable/ic_menu_trash_holo_dark"
-	    android:showAsAction="always" />
+	    android:showAsAction="ifRoom" />
 	
 	<item android:id="@+id/move"
 	    android:title="@string/move"
