--- a/res/menu/download_directories_multiselect.xml
+++ b/res/menu/download_directories_multiselect.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
+     <item android:id="@+id/select_all"
+	    android:title="@string/ic_menu_select_all"
+	    android:icon="@drawable/ic_menu_select_all"
+	    android:showAsAction="always" />
     <item android:id="@+id/remove"
 	    android:title="@string/remove"
 	    android:icon="@drawable/ic_menu_cancel"
