--- a/res/layout/activity_torrent_detail.xml
+++ b/res/layout/activity_torrent_detail.xml
@@ -1,5 +1,55 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/torrent_detail_container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent" >
+	
+	<FrameLayout
+	    android:id="@+id/torrent_detail_container"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"/>
+	    
+	<RelativeLayout
+	    android:id="@+id/fatal_error_layer"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:clickable="true"
+	    android:orientation="vertical"
+	    android:background="#55ffffff"
+	    android:visibility="gone" >
+	    
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:orientation="vertical"
+	        >
+        		<TextView
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:fontFamily="sans-serif-condensed"
+				    android:padding="16dp"
+				    android:text="@string/error_title"
+				    android:background="#cc0000"
+				    android:textStyle="bold"
+				    android:textColor="#e0e0e0"
+				    android:textSize="20sp" />
+        		
+        		<TextView
+  				    android:id="@+id/transmission_error"
+  				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:fontFamily="sans-serif-condensed"
+				    android:padding="16dp"
+				    android:background="#e4e4e4"
+				    android:textSize="20sp" 
+        		    />
+        		<View
+        		    android:layout_width="match_parent"
+        		    android:layout_height="16dp"
+        		    android:background="@drawable/shadow_top"/>
+	    </LinearLayout>
+
+
+	</RelativeLayout>
+    
+</FrameLayout>
+
