--- a/res/layout/fragment_torrent_list.xml
+++ b/res/layout/fragment_torrent_list.xml
@@ -1,14 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
-    <include
-        layout="@layout/torrents_listview"
-        android:id="@+id/list_panel"
-        android:layout_width="match_parent"
-        android:layout_height="0dip"
-        android:layout_weight="1" />  
+    android:layout_height="match_parent" >
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
+
+        <include
+            layout="@layout/torrents_listview"
+            android:id="@+id/list_panel"
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1" />  
+
+    </LinearLayout>
+
+	<RelativeLayout
+	    android:id="@+id/fatal_error_layer"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:clickable="true"
+	    android:orientation="vertical"
+	    android:background="#66ffffff"
+	    android:visibility="gone" >
+	    
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="wrap_content"
+	        android:layout_centerHorizontal="true"
+	        android:orientation="vertical"
+	        >
+        		<TextView
+				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:fontFamily="sans-serif-condensed"
+				    android:padding="16dp"
+				    android:text="@string/error_title"
+				    android:background="#cc0000"
+				    android:textStyle="bold"
+				    android:textColor="#e0e0e0"
+				    android:textSize="20sp" />
+        		
+        		<TextView
+  				    android:id="@+id/transmission_error"
+  				    android:layout_width="match_parent"
+				    android:layout_height="wrap_content"
+				    android:fontFamily="sans-serif-condensed"
+				    android:padding="16dp"
+				    android:background="#e4e4e4"
+				    android:textSize="20sp" 
+        		    />
+        		<View
+        		    android:layout_width="match_parent"
+        		    android:layout_height="16dp"
+        		    android:background="@drawable/shadow_top"/>
+	    </LinearLayout>
+
+
+	</RelativeLayout>
+</FrameLayout>
