--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -2,6 +2,7 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
     <item type="id" name="numbers_key" />
     <item type="id" name="general_preferences" />
+    <item type="id" name="filters_preferences" />
     <item type="id" name="dialog_entry" />
     <item type="id" name="about_header" />
 </resources>
