--- a/res/layout/activity_torrent_list.xml
+++ b/res/layout/activity_torrent_list.xml
@@ -1,8 +1,28 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/torrent_list"
-    android:name="org.sugr.gearshift.TorrentListFragment"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TorrentListActivity"
-    tools:layout="@android:layout/list_content" />
+    android:layout_height="match_parent">
+
+    <include layout="@layout/torrent_list" />
+
+	<LinearLayout
+	    android:id="@+id/sliding_menu_frame"
+	    android:layout_width="@dimen/sliding_menu_offset"
+	    android:layout_height="match_parent"
+	    android:layout_gravity="start"
+	    android:background="#333333"
+	    android:orientation="horizontal" >
+	
+	    <fragment
+	        android:id="@+id/torrent_list_menu"
+	        android:name="org.sugr.gearshift.TorrentListMenuFragment"
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        tools:layout="@layout/fragment_torrent_list_menu" />
+	
+	</LinearLayout>
+	
+
+</android.support.v4.widget.DrawerLayout>
