--- a/res/values-sw600dp-land/refs.xml
+++ b/res/values-sw600dp-land/refs.xml
@@ -7,6 +7,6 @@
     For more on layout aliases, see:
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
-    <item name="activity_torrent_list" type="layout">@layout/activity_torrent_twopane</item>
+    <item name="torrent_list" type="layout">@layout/torrent_list_twopane</item>
 
 </resources>
