remove unneeded drawables
use a selector for the text color in the torrent list item

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -39,7 +39,7 @@
     </style>
         
     <style name="TorrentDetailExpander">
-        <item name="android:background">@drawable/list_selector_holo_light</item>
+        <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:clickable">true</item>
