--- a/res/layout/torrent_list_item.xml
+++ b/res/layout/torrent_list_item.xml
@@ -10,7 +10,7 @@
 	android:paddingRight="16dp"
     android:minHeight="?android:attr/listPreferredItemHeightSmall"
     android:background="@drawable/list_activated_holo_light"
-    android:gravity="center_vertical"        
+    android:gravity="center_vertical"
     android:orientation="vertical" >
     
     <TextView
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-condensed"
+        android:textColor="@drawable/list_item_color"
         android:textAppearance="?android:attr/textAppearanceListItem"
         android:textSize="@dimen/torrent_list_name_text_size"
         android:textStyle="bold" />
@@ -27,6 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
+        android:textColor="@drawable/list_item_color"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:textSize="@dimen/torrent_list_traffic_text_size" />
 
@@ -45,6 +47,7 @@
         android:layout_width="wrap_content"
      	android:layout_height="wrap_content"
         android:fontFamily="sans-serif-light"
+        android:textColor="@drawable/list_item_color"
         android:textAppearanceSmall="?android:attr/textAppearanceListItemSmall"
         android:textSize="@dimen/torrent_list_status_text_size" />
 
