--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,6 +17,10 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
+    <style name="AppTheme.NoBackground" parent="AppTheme">
+        <item name="android:windowBackground">@null</item>
+    </style>
+    
     <style name="TorrentTitle">
 	   	<item name="android:paddingLeft">4dp</item>
 	    <item name="android:paddingBottom">4dp</item>
