--- a/res/layout/torrent_list_twopane.xml
+++ b/res/layout/torrent_list_twopane.xml
@@ -1,8 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/sliding_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
+    android:baselineAligned="false"
     tools:context=".TorrentListActivity" >
 
     <!--
@@ -28,7 +30,7 @@
         android:id="@+id/torrent_detail_panel"
         android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_weight="2"
+        android:layout_weight="0"
         android:layout_marginLeft="-16dp">
 
 	    <View android:id="@+id/vertical_divider"
