--- a/res/layout/fragment_torrent_detail.xml
+++ b/res/layout/fragment_torrent_detail.xml
@@ -1,4 +1,14 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/detail_background" >
+
+    <android.support.v4.view.ViewPager
         android:id="@+id/torrent_detail_pager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:alpha="0"
+        android:visibility="gone" />
+    
+</FrameLayout>
+
