--- a/res/layout/fragment_torrent_detail_page.xml
+++ b/res/layout/fragment_torrent_detail_page.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/detail_scroll"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/detail_background" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:id="@+id/torrent_detail_container"
