--- a/res/layout/torrent_detail_files.xml
+++ b/res/layout/torrent_detail_files.xml
@@ -1,26 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/TorrentDetailContainer"
+    style="@style/CardContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/torrent_detail_files_expander"
-        style="@style/TorrentDetailExpander" >
+        style="@style/CardHeaderExpander" >
 
         <TextView
-            style="@style/TorrentDetailExpanderText"
+            style="@style/CardHeaderExpanderText"
             android:text="@string/torrent_files" />
 
         <View
             android:id="@+id/torrent_detail_files_expander_image"
-            style="@style/TorrentDetailExpanderImage" />
+            style="@style/CardHeaderExpanderImage" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/torrent_detail_files_content"
         android:orientation="vertical"
-        style="@style/TorrentDetailContentCollapsed" >
+        style="@style/CardContentCollapsed" >
     </LinearLayout>
 </LinearLayout>
