--- a/res/layout/torrent_detail_files_directory_row.xml
+++ b/res/layout/torrent_detail_files_directory_row.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/TorrentDetailOverviewHeading"
+    style="@style/CardHeading"
     android:id="@+id/torrent_detail_files_row"
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
