prevent an edittext from gaining focus on activity start

--- a/res/layout-sw600dp-w720dp/activity_transmission_session.xml
+++ b/res/layout-sw600dp-w720dp/activity_transmission_session.xml
@@ -8,6 +8,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true"
         android:padding="8dp"
         android:paddingBottom="16dp"
         android:paddingTop="16dp" >
